# SPECTRA-LAYER

./: .gitignore  README.md  pyproject.toml
examples/: load_data_and_try.ipynb  simple_example.ipynb
spectra_layer/model/: transformer.py  utils.py
